loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:3: error: not found: value estsurBlanc
} while (!estsurBlanc) 
          ^